# ChatBrain

./: .env.local.example  DEMO.md  README.md  package-lock.json  package.json  proxy.ts
app/: globals.css  layout.tsx  page.tsx
app/app/: layout.tsx  page.tsx
app/app/chat/[id]/: chat-view.tsx  page.tsx
app/app/sources/: page.tsx  sources-view.tsx
app/auth/: actions.ts
app/sign-in/: page.tsx  sign-in-form.tsx
app/sign-up/: page.tsx  sign-up-form.tsx
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: chat.py  conversations.py  sources.py
backend/app/core/: auth.py  config.py  logging.py  supabase.py
backend/app/ingestion/: chunker.py  embedder.py  pdf.py  pipeline.py  summarizer.py  url.py
backend/app/rag/: chat.py  prompt.py  retrieval.py
backend/tests/: conftest.py  test_chunker.py  test_citations.py  test_pdf_errors.py  test_url_scraper.py
components/: app-shell.tsx  brand.tsx
lib/: api.ts
lib/supabase/: client.ts  proxy.ts  server.ts
supabase/migrations/: 20260421120000_init.sql  20260421120100_storage.sql
